Fix activity time alignment issue

--- a/src/_includes/assets/css/media.screen-large.css
+++ b/src/_includes/assets/css/media.screen-large.css
@@ -76,7 +76,7 @@
   }
 
   .activity__time {
-    width: 5.125rem;
+    min-width: 5.125rem;
   }
 
   body > footer {
